@@ -1,3 +1,11 @@
+2004-05-28  Robert Widhopf-Fenk  <bbdb@robf.de>
+
+	* lisp/bbdb.el (bbdb-record-set-net): added a hack to detect that
+	aliases require rebuilding.
+
+	* lisp/bbdb.el (bbdb-mode-map): added del/space binding for
+	scrolling.
+
 2004-04-29  Robert Widhopf-Fenk  <bbdb@robf.de>
 
 	* lisp/bbdb-rmail.el: Just define rmail-buffer if not defined and
